added favicon for vs code

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<!-- Font Awesome cdn -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
 
+		<!-- favicon -->
+		<link rel="shortcut icon" href="./assets/favicon.ico" sizes="128x128" />
 		<title>VS Code Clone</title>
 	</head>
 
