added version update section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Font Awesome cdn -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
-    
+
     <title>VS Code Clone</title>
 </head>
 
@@ -82,25 +82,31 @@
             </section>
         </section>
     </header>
+
+    <!-- Hero Section -->
     <main>
-<section>
-<div class="bg-gray">
-
-</div>
-
-<div class="bg-gray">
-
-    <img src="./assets/vs-code-snapshot.png" alt="vs-code-snapshot">
-</div>
-</section>
-    </main>
-    <footer>
-        <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
-            <p>
-                Created for <span class="font-bold">Educational</span> and <span class="font-bold">Learning</span> purpose only.
+        <section class="bg-[#25252B] items-center z-10 text-white w-full text-center p-2">
+            <p class="text-[#C1CCCC] px-12">
+                <a href="https://code.visualstudio.com/updates/v1_73" class="text-[#0D96FF] hover:underline underline-offset-1">Version 1.73</a> is now available! Read about the new features and fixes from October.
             </p>
         </section>
-    </footer>
-</body>
+        <section class="flex flex-col lg:flex-row bg-gray-600">
+            <div class="">
+                <p>qwdqd</p>
+            </div>
 
+            <div class="">
+                <img src="./assets/vs-code-snapshot.png" alt="vs-code-snapshot">
+            </div>
+        </section>
+        <footer>
+            <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
+                <p>
+                    Created for <span class="font-bold">Educational</span> and <span class="font-bold">Learning</span> purpose only.
+                </p>
+            </section>
+        </footer>
+    </main>
+    
+</body>
 </html>
