--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
     <!-- Hero Section -->
     <main>
+        <!-- Version Update Section -->
         <section class="bg-[#25252B] items-center z-10 text-white w-full text-center p-2">
             <p class="text-[#C1CCCC] px-12">
                 <a href="https://code.visualstudio.com/updates/v1_73" class="text-[#0D96FF] hover:underline underline-offset-1">Version 1.73</a> is now available! Read about the new features and fixes from October.
