added tailwind code for vs code snapshot in hero section

--- a/index.html
+++ b/index.html
@@ -91,13 +91,15 @@
                 <a href="https://code.visualstudio.com/updates/v1_73" class="text-[#0D96FF] hover:underline underline-offset-1">Version 1.73</a> is now available! Read about the new features and fixes from October.
             </p>
         </section>
-        <section class="flex flex-col lg:flex-row bg-gray-600">
-            <div class="">
+
+
+        <section class="flex flex-col lg:flex-row bg-[#2C2C32]">
+            <div class="lg:w-2/5">
                 <p>qwdqd</p>
             </div>
 
-            <div class="">
-                <img src="./assets/vs-code-snapshot.png" alt="vs-code-snapshot">
+            <div class="mx-2 my-1 lg:w-3/5 lg:mr-[75px] lg:my-8">
+                <img src="./assets/vs-code-snapshot.png" alt="vs-code-snapshot" class="lg:w-[90%] ">
             </div>
         </section>
         <footer>
