--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                 <div
                     class="hidden lg:flex text-white bg-[rgba(255,255,255,.08)] hover:bg-[#525257] flex items-center justify-between gap-px">
                     <span class="mx-2 hidden lg:flex py-3"><button>
-                            <a href="https://code.visualstudio.com/Search"><i class="fa fa-search"
-                                    aria-hidden="true"></i></a>
+                            <a href="https://code.visualstudio.com/Search"><img src="./assets/search.png" alt="search-logo"></a>
                         </button></span>
                     <input
                         class="font-semibold hidden h-full xl:flex lg:w-20 xl:w-36 bg-transparent text-sm text-white outline-none py-3"
