--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                         <li class="p-3 lg:p-2.5 cursor-pointer text-gray-400 hover:text-white lg:hidden"><a
                                 href="https://code.visualstudio.com/Search"></a>Search</a></li>
                         <a href="https://code.visualstudio.com/Download"
-                            class="text-left lg:hidden border-none px-4 py-3 text-white m-0 font-semibold bg-sky-700 hover:bg-sky-800 cursor-pointer"><i
-                                class="px-2 fa-solid fa-download"></i>Download</a>
+                            class="text-left lg:hidden border-none px-4 py-3 text-white m-0 font-semibold bg-sky-700 hover:bg-sky-800 cursor-pointer"><i class="px-2 fa-solid fa-download"></i>Download</a>
                     </ul>
                 </nav>
 
