--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
                 <!-- Search Bar  -->
                 <div
                     class="hidden lg:flex text-white bg-[rgba(255,255,255,.08)] hover:bg-[#525257] flex items-center justify-between gap-px">
-                    <span class="mx-2 hidden lg:flex py-3"><button>
+                    <span class="mx-2 hidden lg:flex py-3">
+                        <button>
                             <a href="https://code.visualstudio.com/Search"><img src="./assets/search.png" alt="search-logo"></a>
-                        </button></span>
+                        </button>
+                    </span>
                     <input
                         class="font-semibold hidden h-full xl:flex lg:w-20 xl:w-36 bg-transparent text-sm text-white outline-none py-3"
                         placeholder="Search Docs" type="text">
@@ -90,16 +92,32 @@
             </p>
         </section>
 
-
+        <!-- main section vs code image and download button -->
         <section class="flex flex-col lg:flex-row bg-[#2C2C32]">
+
+            <!-- Texts and download button -->
             <div class="lg:w-2/5">
-                <p>qwdqd</p>
+                <p>Code editing.
+                    Redefined.</p>
+                    <p>
+                        Free. Built on open source. Runs everywhere.
+                    </p>
+                    <button>
+                        Download for Windows <br>
+                        Stable build
+                    </button>
+                    <button>
+
+                    </button>
             </div>
 
-            <div class="mx-2 my-1 lg:w-3/5 lg:mr-[75px] lg:my-8">
+            <!-- Vs code snapshot -->
+            <div class="mx-2 my-1 md:w-3/5 md:mr-[75px] md:my-8">
                 <img src="./assets/vs-code-snapshot.png" alt="vs-code-snapshot" class="lg:w-[90%] ">
             </div>
         </section>
+
+        <!-- Education Purpose footer -->
         <footer>
             <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
                 <p>
@@ -108,6 +126,5 @@
             </section>
         </footer>
     </main>
-    
 </body>
 </html>
