created doenload button and some texts in left main section

--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
         <section class="flex flex-col lg:flex-row bg-[#2C2C32]">
 
             <!-- Texts and download button -->
-            <div class="lg:w-2/5">
-                <p>Code editing.
-                    Redefined.</p>
-                    <p>
-                        Free. Built on open source. Runs everywhere.
-                    </p>
-                    <button>
-                        Download for Windows <br>
+            <div class="lg:w-2/5 flex flex-col items-center">
+                <p class="">Code editing.</p>
+                <p class="">Redefined.</p>
+                <p class="">
+                    Free. Built on open source. Runs everywhere.
+                </p>
+                <button>
+                    Download for Windows <br>
                         Stable build
-                    </button>
-                    <button>
+                </button>
+                <button>
 
-                    </button>
+                </button>
             </div>
 
             <!-- Vs code snapshot -->
