--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Font -->
+    <style>
+        body{
+            font-family: "Segoe UI", sans-serif;
+        }
+    </style>
+
     <!-- Tailwind CSS script -->
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -59,7 +66,7 @@
             <section class="flex">
                 <!-- Search Bar  -->
                 <div
-                    class="hidden lg:flex text-white bg-[rgba(255,255,255,.08)] hover:bg-[#525257] flex items-center justify-between gap-px">
+                    class="hidden lg:flex text-white bg-[#FFFFFF14] hover:bg-[#525257] flex items-center justify-between gap-px">
                     <span class="mx-2 hidden lg:flex py-3">
                         <button>
                             <a href="https://code.visualstudio.com/Search"><img src="./assets/search.png" alt="search-logo"></a>
@@ -72,7 +79,7 @@
                 <!-- Download Button  -->
                 <div class="cursor-pointer hidden lg:flex">
                     <button
-                        class="border-none px-3 py-3 text-white m-0 font-semibold bg-[#005da5] hover:bg-[#015493] flex gap-2">
+                        class="border-none px-3 py-3 text-white m-0 font-semibold bg-[#0066b8] hover:bg-[#015493] flex gap-2">
                         <a href="https://code.visualstudio.com/Download" class="flex flex-row gap-2">
                             <div class="text-white"><i class="fa-solid fa-download"></i></div>
                             Download
@@ -87,7 +94,7 @@
     <main>
         <!-- Version Update Section -->
         <section class="bg-[#25252B] items-center z-10 text-white w-full text-center p-2.5">
-            <p class="text-[#C1CCCC] px-12 mx-8">
+            <p class="text-[#CCCCCC] px-12 mx-8">
                 <a href="https://code.visualstudio.com/updates/v1_73" class="text-[#0D96FF] hover:underline underline-offset-1">Version 1.73</a> is now available! Read about the new features and fixes from October.
             </p>
         </section>
@@ -96,27 +103,46 @@
         <section class="flex flex-col lg:flex-row bg-[#2C2C32]">
 
             <!-- Texts and download button -->
-            <div class="lg:w-2/5 flex flex-col items-center">
-                <p class="text-white">Code editing.</p>
-                <p class="text-white font-semibold">Redefined.</p>
-                <p class="text-[#ABABAD]">
+            <div class="lg:w-2/5 flex flex-col items-center mt-[20px] lg:mt-[70px] lg:pl-[150px]">
+                <h1 class="text-[50px] flex flex-col items-center leading-[55px]">
+                    <p class="text-white font-light">Code editing.</p>
+                    <p class="text-white font-normal">Redefined.</p>
+                </h1>
+                <p class="text-[#FFFFFF99] text-[18px] my-2.5">
                     Free. Built on open source. Runs everywhere.
                 </p>
-                <button>
-                    Download for Windows <br>
-                        Stable build
-                </button>
-                <button>
-
-                </button>
+                <div class="flex flex-row my-4">
+                    <button class="bg-[#0066b8] mr-0.5 px-6 py-2 hover:bg-[#015493]">
+                        <p class="text-white font-semibold text-lg">Download for Windows</p>
+                        <p class="text-[#FFFFFFE6] text-[14px]">Stable build</p>
+                    </button>
+                    <button class="bg-[#0066b8] px-3 hover:bg-[#015493]">
+                        <img src="./assets/arrow-down-sign-to-navigate.png" alt="download">
+                    </button>
+                </div>
+                <p class="text-[#FFFFFF99] bg-[#25252b] px-4 py-2 text-sm rounded-md">
+                    <a href="https://vscode.dev/" target="_blank" class="text-[#0D96FF] hover:underline underline-offset-1">Web</a>, 
+                    <a href="https://code.visualstudio.com/insiders/" class="text-[#0D96FF] hover:underline underline-offset-1">Insiders edition</a>, or 
+                    <a href="https://code.visualstudio.com/#alt-downloads" class="text-[#0D96FF] hover:underline underline-offset-1">other platforms</a>
+                </p>
+                <p class="text-[#FFFFFF99] text-xs mt-4 leading-[6px]">By using VS Code, you agree to its</p>
+                <p class="text-[#FFFFFF99]">
+                    <a href="https://code.visualstudio.com/#home-terms" class="text-[#0D96FF] hover:underline underline-offset-1 text-xs">license and privacy statement</a>.
+                </p>
             </div>
 
             <!-- Vs code snapshot -->
-            <div class="mx-2 my-1 md:w-3/5 md:mr-[75px] md:my-8">
+            <div class="mx-2 my-1 p-2 lg:w-3/5 lg:mr-[25px] lg:my-6 lg:pr-[50px]">
                 <img src="./assets/vs-code-snapshot.png" alt="vs-code-snapshot" class="lg:w-[90%] ">
             </div>
         </section>
 
+        <!-- Icon section -->
+        <section class="h-[100px]">
+            <p>
+                cjenceeocnoec <br>cecniueciue
+            </p>
+        </section>
         <!-- Education Purpose footer -->
         <footer>
             <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
