--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
                         <img src="./assets/arrow-down-sign-to-navigate.png" alt="download">
                     </button>
                 </div>
+
+                <!-- Links after download button -->
                 <p class="text-[#FFFFFF99] bg-[#25252b] px-4 py-2 text-sm rounded-md">
                     <a href="https://vscode.dev/" target="_blank" class="text-[#0D96FF] hover:underline underline-offset-1">Web</a>, 
                     <a href="https://code.visualstudio.com/insiders/" class="text-[#0D96FF] hover:underline underline-offset-1">Insiders edition</a>, or 
