added code for icons

--- a/index.html
+++ b/index.html
@@ -140,10 +140,35 @@
         </section>
 
         <!-- Icon section -->
-        <section class="h-[100px]">
-            <p>
-                cjenceeocnoec <br>cecniueciue
-            </p>
+        <section class="h-[400px] md:h-[200px] flex lg:flex-row">
+            <div>
+                <a href="">
+                    <img src="./assets/light-bulb.png" alt="Intellisense" class="h-[70px]">
+                </a>
+                <p>
+                    Intellisense
+                </p>
+                <a href="">
+                    <img src="./assets/debug.png" alt="Run and Debug" class="h-[70px]">
+                </a>
+                <p>
+                    Run and Debug
+                </p>
+            </div>
+            <div>
+                <a href="">
+                    <img src="./assets/git.png" alt="Git" class="h-[70px]">
+                </a>
+                <p>
+                    Built-in Git
+                </p>
+                <a href="">
+                    <img src="./assets/extension.png" alt="Extensions" class="h-[70px]">
+                </a>
+                <p>
+                    Extensions
+                </p>
+            </div>
         </section>
         <!-- Education Purpose footer -->
         <footer>
