tailwind code for icon section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Font -->
     <style>
-        body{
+        body {
             font-family: "Segoe UI", sans-serif;
         }
     </style>
@@ -54,7 +54,8 @@
                         <li class="p-3 lg:p-2.5 cursor-pointer text-[#ABABAD] font-medium hover:text-white lg:hidden"><a
                                 href="https://code.visualstudio.com/Search"></a>Search</a></li>
                         <a href="https://code.visualstudio.com/Download"
-                            class="text-left lg:hidden border-none px-4 py-3 text-white m-0 font-semibold bg-sky-700 hover:bg-sky-800 cursor-pointer"><i class="px-2 fa-solid fa-download"></i>Download</a>
+                            class="text-left lg:hidden border-none px-4 py-3 text-white m-0 font-semibold bg-sky-700 hover:bg-sky-800 cursor-pointer"><i
+                                class="px-2 fa-solid fa-download"></i>Download</a>
                     </ul>
                 </nav>
 
@@ -69,7 +70,8 @@
                     class="hidden lg:flex text-white bg-[#FFFFFF14] hover:bg-[#525257] flex items-center justify-between gap-px">
                     <span class="mx-2 hidden lg:flex py-3">
                         <button>
-                            <a href="https://code.visualstudio.com/Search"><img src="./assets/search.png" alt="search-logo"></a>
+                            <a href="https://code.visualstudio.com/Search"><img src="./assets/search.png"
+                                    alt="search-logo"></a>
                         </button>
                     </span>
                     <input
@@ -95,7 +97,9 @@
         <!-- Version Update Section -->
         <section class="bg-[#25252B] items-center z-10 text-white w-full text-center p-2.5">
             <p class="text-[#CCCCCC] px-12 mx-8">
-                <a href="https://code.visualstudio.com/updates/v1_73" class="text-[#0D96FF] hover:underline underline-offset-1">Version 1.73</a> is now available! Read about the new features and fixes from October.
+                <a href="https://code.visualstudio.com/updates/v1_73"
+                    class="text-[#0D96FF] hover:underline underline-offset-1">Version 1.73</a> is now available! Read
+                about the new features and fixes from October.
             </p>
         </section>
 
@@ -123,13 +127,18 @@
 
                 <!-- Links after download button -->
                 <p class="text-[#FFFFFF99] bg-[#25252b] px-4 py-2 text-sm rounded-md">
-                    <a href="https://vscode.dev/" target="_blank" class="text-[#0D96FF] hover:underline underline-offset-1">Web</a>, 
-                    <a href="https://code.visualstudio.com/insiders/" class="text-[#0D96FF] hover:underline underline-offset-1">Insiders edition</a>, or 
-                    <a href="https://code.visualstudio.com/#alt-downloads" class="text-[#0D96FF] hover:underline underline-offset-1">other platforms</a>
+                    <a href="https://vscode.dev/" target="_blank"
+                        class="text-[#0D96FF] hover:underline underline-offset-1">Web</a>,
+                    <a href="https://code.visualstudio.com/insiders/"
+                        class="text-[#0D96FF] hover:underline underline-offset-1">Insiders edition</a>, or
+                    <a href="https://code.visualstudio.com/#alt-downloads"
+                        class="text-[#0D96FF] hover:underline underline-offset-1">other platforms</a>
                 </p>
                 <p class="text-[#FFFFFF99] text-xs mt-4 leading-[6px]">By using VS Code, you agree to its</p>
                 <p class="text-[#FFFFFF99]">
-                    <a href="https://code.visualstudio.com/#home-terms" class="text-[#0D96FF] hover:underline underline-offset-1 text-xs">license and privacy statement</a>.
+                    <a href="https://code.visualstudio.com/#home-terms"
+                        class="text-[#0D96FF] hover:underline underline-offset-1 text-xs">license and privacy
+                        statement</a>.
                 </p>
             </div>
 
@@ -140,44 +149,45 @@
         </section>
 
         <!-- Icon section -->
-        <section class="h-[400px] md:h-[200px] flex lg:flex-row">
-            <div>
-                <a href="">
+        <section class="flex gap-x-10 lg:ml-[120px] max-w-[95%] ml-[20px] lg:max-w-[80%]">
+            <div class="flex flex-col w-[50%] md:flex-row items-center justify-center">
+                <a href="" class="flex flex-col w-[100%] py-4 items-center justify-center gap-y-3 hover:bg-[#E3E3E3]">
                     <img src="./assets/light-bulb.png" alt="Intellisense" class="h-[70px]">
+                    <p class="text-[17px] md:text-[20px] text-[#444444]">
+                        Intellisense
+                    </p>
                 </a>
-                <p>
-                    Intellisense
-                </p>
-                <a href="">
+                <a href="" class="flex flex-col w-[100%] py-4 items-center justify-center gap-y-3 hover:bg-[#E3E3E3]">
                     <img src="./assets/debug.png" alt="Run and Debug" class="h-[70px]">
+                    <p class="text-[17px] md:text-[20px] text-[#444444]">
+                        Run and Debug
+                    </p>
                 </a>
-                <p>
-                    Run and Debug
-                </p>
             </div>
-            <div>
-                <a href="">
+            <div class="flex flex-col w-[50%] md:flex-row items-center justify-center">
+                <a href="" class="flex flex-col w-[100%] py-4 items-center justify-center gap-y-3 hover:bg-[#E3E3E3]">
                     <img src="./assets/git.png" alt="Git" class="h-[70px]">
+                    <p class="text-[17px] md:text-[20px] text-[#444444]">
+                        Built-in Git
+                    </p>
                 </a>
-                <p>
-                    Built-in Git
-                </p>
-                <a href="">
+                <a href="" class="flex flex-col w-[100%] py-4 items-center justify-center gap-y-3 hover:bg-[#E3E3E3]">
                     <img src="./assets/extension.png" alt="Extensions" class="h-[70px]">
+                    <p class="text-[17px] md:text-[20px] text-[#444444]">
+                        Extensions
+                    </p>
                 </a>
-                <p>
-                    Extensions
-                </p>
             </div>
         </section>
         <!-- Education Purpose footer -->
-        <footer>
+        <!-- <footer>
             <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
                 <p>
                     Created for <span class="font-bold">Educational</span> and <span class="font-bold">Learning</span> purpose only.
                 </p>
             </section>
-        </footer>
+        </footer> -->
     </main>
 </body>
+
 </html>
