added tailwind code for tweets section

--- a/index.html
+++ b/index.html
@@ -179,6 +179,62 @@
                 </a>
             </div>
         </section>
+
+        <!-- Tweets Section -->
+        <section class="flex flex-col bg-[#f5f5f5] md:flex-row">
+            <div class="flex flex-row items-center">
+                <div class="flex flex-row w-[100%] py-4 items-center justify-center gap-y-3">
+                    <a href="">
+                        <img src="./assets/Una.jpg" alt="Una" class="h-[70px] rounded-full">
+                    </a>
+                </div>
+                <div>
+                    <p>
+                        <a href="">
+                            Una Kravets <span>@Una</span>
+                        </a>
+                    </p>
+                    <p class="text-[17px] md:text-[20px] text-[#444444]">
+                        VS <a href="">@code</a> does so many things right. I’m constantly impressed by the UX, and customizing workspace / user preferences is no exception. 🙌🏼💯 It just keeps getting better ❤️
+                    </p>
+                </div>
+            </div>
+            <div class="flex flex-col md:flex-row items-center justify-center">
+                <div class="flex flex-col w-[100%] py-4 items-center justify-center gap-y-3">
+                    <a href="">
+                        <img src="./assets/Darren.jpg" alt="Darren" class="h-[70px] rounded-full">
+                    </a>
+                </div>
+                <div>
+                    <p>
+                        <a href="">
+                            Darren <span>@MrDarrenV</span>
+                        </a>
+                    </p>
+                    <p class="text-[17px] md:text-[20px] text-[#444444]">
+                        Just as I thought <a href="">@code</a> couldn't get better, out comes its Remote Development plugins that let you remote into containers as a dev environment! 😍
+                    </p>
+                </div>
+            </div>
+            <div class="flex flex-col md:flex-row items-center justify-center">
+                <div class="flex flex-col w-[100%] py-4 items-center justify-center gap-y-3">
+                    <a href="">
+                        <img src="./assets/Cassidy.jpg" alt="Intellisense" class="h-[70px] rounded-full">
+                    </a>
+                </div>
+                <div>
+                    <p>
+                        <a href="">
+                            Cassidy Williams <span>@cassidoo</span>
+                        </a>
+                    </p>
+                    <p class="text-[17px] md:text-[20px] text-[#444444]">
+                        I was a vim fan, but then discovered VS Code's Vim plugin, which lets me add in my vim keybindings. I can maintain my coding style without having to compromise on speed.
+                    </p>
+                </div>
+            </div>
+        </section>
+
         <!-- Education Purpose footer -->
         <!-- <footer>
             <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
