added tainwind css for intellisense feature section for small device

--- a/index.html
+++ b/index.html
@@ -260,6 +260,22 @@
                 </div>
             </section>
         </section>
+
+        <!-- Intellisense feature Section -->
+        <section class="flex flex-col md:flex-row md:w-[80%] my-[60px]">
+            <div class="md:w-[35%]  ml-[130px]">
+                <img src="./assets/home-intellisense.svg" alt="Intellisense">
+                
+            </div>
+            <div class="md:w-[65%] mx-[20px]">
+                <h2 class="text-[18px] mt-[10px] mb-[30px]">
+                    Meet IntelliSense.
+                </h2>
+                    <p class="text-[16px] leading-8">Go beyond syntax highlighting and autocomplete with IntelliSense, which provides smart completions based on variable types, function definitions, and imported modules.
+                    </p>
+            </div>
+        </section>
+
         <!-- Education Purpose footer -->
         <!-- <footer>
             <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
