completed tainwind css for intellisense feature section

--- a/index.html
+++ b/index.html
@@ -262,17 +262,16 @@
         </section>
 
         <!-- Intellisense feature Section -->
-        <section class="flex flex-col md:flex-row md:w-[80%] my-[60px]">
-            <div class="md:w-[35%]  ml-[130px]">
-                <img src="./assets/home-intellisense.svg" alt="Intellisense">
-                
+        <section class="flex flex-col md:flex-row lg:w-[80%] my-[60px] lg:ml-[70px] md:ml-[-80px]">
+            <div class="md:w-[35%] ml-[100px] lg:ml-[130px]">
+                <img src="./assets/home-intellisense.svg" alt="Intellisense" class="w-[80%] md:w-[100%]">
             </div>
-            <div class="md:w-[65%] mx-[20px]">
-                <h2 class="text-[18px] mt-[10px] mb-[30px]">
+            <div class="md:w-[65%] mx-[20px] lg:ml-[150px] md:mt-[-20px] lg:mt-[0px] md:ml-[50px]">
+                <h2 class="text-[18px] mt-[10px] mb-[30px] lg:text-[30px] lg:mt-[-10px] md:text-[27px] font-extralight">
                     Meet IntelliSense.
                 </h2>
-                    <p class="text-[16px] leading-8">Go beyond syntax highlighting and autocomplete with IntelliSense, which provides smart completions based on variable types, function definitions, and imported modules.
-                    </p>
+                <p class="text-[16px] leading-8 lg:text-[18px] md:text-[15.5px] font-light">Go beyond syntax highlighting and autocomplete with IntelliSense, which provides smart completions based on variable types, function definitions, and imported modules.
+                </p>
             </div>
         </section>
 
