--- a/index.html
+++ b/index.html
@@ -275,6 +275,22 @@
             </div>
         </section>
 
+        <!-- Debugging feature Section -->
+        <section class="bg-[#F5F5F5] py-[20px]">
+            <section class="bg-[#F5F5F5] flex flex-col-reverse md:flex-row lg:w-[80%] my-[60px] lg:mx-[170px] md:mr-[-80px]">
+                <div class="md:w-[65%] mx-[20px] lg:mr-[150px] md:mt-[-20px] lg:mt-[0px] md:mr-[50px]">
+                    <h2 class="text-[18px] mt-[10px] mb-[30px] lg:text-[30px] lg:mt-[-10px] md:text-[27px] font-extralight">
+                        Print statement debugging is a thing of the past.
+                    </h2>
+                    <p class="text-[16px] leading-8 lg:text-[18px] md:text-[15.5px] font-light">Debug code right from the editor. Launch or attach to your running apps and debug with break points, call stacks, and an interactive console.
+                    </p>
+                </div>
+                <div class="md:w-[35%] ml-[100px] lg:mr-[130px]">
+                    <img src="./assets/home-debug.svg" alt="Debug" class="w-[80%] md:w-[100%]">
+                </div>
+            </section>
+        </section>
+
         <!-- Education Purpose footer -->
         <!-- <footer>
             <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
