added tailwind css for git feature section

--- a/index.html
+++ b/index.html
@@ -291,6 +291,20 @@
             </section>
         </section>
 
+        <!-- Git feature Section -->
+        <section class="flex flex-col md:flex-row lg:w-[80%] my-[60px] lg:ml-[70px] md:ml-[-80px]">
+            <div class="md:w-[35%] ml-[100px] lg:ml-[130px]">
+                <img src="./assets/home-git.svg" alt="Intellisense" class="w-[80%] md:w-[100%]">
+            </div>
+            <div class="md:w-[65%] mx-[20px] lg:ml-[150px] md:mt-[-20px] lg:mt-[0px] md:ml-[50px]">
+                <h2 class="text-[18px] mt-[10px] mb-[30px] lg:text-[30px] lg:mt-[-10px] md:text-[27px] font-extralight">
+                    Git commands built-in.
+                </h2>
+                <p class="text-[16px] leading-8 lg:text-[18px] md:text-[15.5px] font-light">Working with Git and other SCM providers has never been easier. Review diffs, stage files, and make commits right from the editor. Push and pull from any hosted SCM service.
+                </p>
+            </div>
+        </section>
+
         <!-- Education Purpose footer -->
         <!-- <footer>
             <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
