--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <!-- Git feature Section -->
         <section class="flex flex-col md:flex-row lg:w-[80%] my-[60px] lg:ml-[70px] md:ml-[-80px]">
             <div class="md:w-[35%] ml-[100px] lg:ml-[130px]">
-                <img src="./assets/home-git.svg" alt="Intellisense" class="w-[80%] md:w-[100%]">
+                <img src="./assets/home-git.svg" alt="Git" class="w-[80%] md:w-[100%]">
             </div>
             <div class="md:w-[65%] mx-[20px] lg:ml-[150px] md:mt-[-20px] lg:mt-[0px] md:ml-[50px]">
                 <h2 class="text-[18px] mt-[10px] mb-[30px] lg:text-[30px] lg:mt-[-10px] md:text-[27px] font-extralight">
@@ -303,6 +303,22 @@
                 <p class="text-[16px] leading-8 lg:text-[18px] md:text-[15.5px] font-light">Working with Git and other SCM providers has never been easier. Review diffs, stage files, and make commits right from the editor. Push and pull from any hosted SCM service.
                 </p>
             </div>
+        </section>
+
+        <!-- Extension feature Section -->
+        <section class="bg-[#F5F5F5] py-[20px]">
+            <section class="bg-[#F5F5F5] flex flex-col-reverse md:flex-row lg:w-[80%] my-[60px] lg:mx-[170px] md:mr-[-80px]">
+                <div class="md:w-[65%] mx-[20px] lg:mr-[150px] md:mt-[-20px] lg:mt-[0px] md:mr-[50px]">
+                    <h2 class="text-[18px] mt-[10px] mb-[30px] lg:text-[30px] lg:mt-[-10px] md:text-[27px] font-extralight">
+                        Extensible and customizable.
+                    </h2>
+                    <p class="text-[16px] leading-8 lg:text-[18px] md:text-[15.5px] font-light">Want even more features? Install extensions to add new languages, themes, debuggers, and to connect to additional services. Extensions run in separate processes, ensuring they won't slow down your editor. <a href="https://code.visualstudio.com/docs/editor/extension-marketplace" class="text-[#0071bc]">Learn more about extensions.</a>
+                    </p>
+                </div>
+                <div class="md:w-[35%] ml-[100px] lg:mr-[130px]">
+                    <img src="./assets/Hundreds-of-Extensions.png" alt="Extension" class="w-[80%] md:w-[100%]">
+                </div>
+            </section>
         </section>
 
         <!-- Education Purpose footer -->
