added tailwind css for language marketplace section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
         body {
             font-family: "Segoe UI", sans-serif;
+            max-width: 4320px;
         }
     </style>
 
@@ -261,6 +262,8 @@
             </section>
         </section>
 
+        <!-- Feature Sections -->
+
         <!-- Intellisense feature Section -->
         <section class="flex flex-col md:flex-row lg:w-[80%] my-[60px] lg:ml-[70px] md:ml-[-80px]">
             <div class="md:w-[35%] ml-[100px] lg:ml-[130px]">
@@ -335,6 +338,82 @@
             </div>
         </section>
 
+        <!-- Section for language marketplace -->
+        <section class="bg-[#F5F5F5] py-[60px]">
+            <p class="text-[19px] text-[#444444] md:text-[30px] text-center font-extralight pb-[30px]">
+                VS Code for
+            </p>
+            <div class="bg-[#f5f5f5] px-4 flex flex-row md:flex-col md:items-center md:flex-wrap">
+                <!-- <div class="flex flex-col md:flex-row justify-evenly w-[70%] md:mx-[220px] gap-[20px] md:py-[20px]"> -->
+                <div class="flex flex-col w-[70%] md:grid md:grid-col md:grid-cols-6 md:gap-6 md:mx-[220px] gap-[20px] md:py-[20px]">
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/javascript.svg" alt="Javascript" class="w-[30px]">
+                        JavaScript
+                    </p>
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/python.svg" alt="Python" class="w-[30px]">
+                        Python
+                    </p>
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/java.svg" alt="Java" class="w-[30px]">
+                        Java
+                    </p>
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/markdown.svg" alt="Markdown" class="w-[30px]">
+                        Markdown
+                    </p>
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/typescript.svg" alt="Typescript" class="w-[30px]">
+                        Typescript
+                    </p>
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/cpp.svg" alt="C/C++" class="w-[30px]">
+                        C/C++
+                    </p>
+                </div>
+        
+                <!-- <div class="flex flex-col md:flex-row w-[70%] md:mx-[220px] gap-[20px] justify-evenly"> -->
+                <div class="flex flex-col w-[70%] md:grid md:grid-col md:grid-cols-6 md:gap-6 md:mx-[220px] gap-[20px]">
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/json.svg" alt="JSON" class="w-[30px]">
+                        JSON
+                    </p>
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/powershell.svg" alt="Powershell" class="w-[30px]">
+                        Powershell
+                    </p>
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/html.svg" alt="HTML/CSS" class="w-[30px]">
+                        HTML/CSS
+                    </p>
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/csharp.svg" alt="C#" class="w-[30px]">
+                        C#
+                    </p>
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/php.svg" alt="PHP" class="w-[30px]">
+                        PHP
+                    </p>
+                    <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
+                        <img src="./assets/yaml.svg" alt="YAML" class="w-[30px]">
+                        YAML
+                    </p>
+                </div>
+            </div>
+            <div class="flex flex-col items-center">
+                <p class="text-[15px] md:text-[18px] my-[20px]">
+                    <a href="https://marketplace.visualstudio.com/search?target=VSCode&category=Programming%20Languages&sortBy=Installs" class="text-[#0071bc] hover:underline underline-offset-2">
+                        and many more languages on the Marketplace...
+                    </a>
+                </p>
+                <div class="bg-[#0066b8] text-[#FFFFFF] text-[16px] md:text-[20px] my-[20px] py-[15px] px-[40px] font-medium">
+                    <a href="https://code.visualstudio.com/docs">
+                        Get Started Now
+                    </a>
+                </div>
+            </div> 
+        </section>
+
         <!-- Education Purpose footer -->
         <!-- <footer>
             <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
@@ -345,5 +424,4 @@
         </footer> -->
     </main>
 </body>
-
 </html>
