made nav bar download button and main section download button as anchor tag

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
                     Free. Built on open source. Runs everywhere.
                 </p>
                 <div class="flex flex-row my-4">
-                    <button class="bg-[#0066b8] mr-0.5 px-6 py-2 hover:bg-[#015493]">
+                    <a href="https://code.visualstudio.com/docs/?dv=win" class="bg-[#0066b8] mr-0.5 px-6 py-2 hover:bg-[#015493]">
                         <p class="text-white font-semibold text-lg">Download for Windows</p>
-                        <p class="text-[#FFFFFFE6] text-[14px]">Stable build</p>
-                    </button>
+                        <p class="text-[#FFFFFFE6] text-[14px] text-center">Stable build</p>
+                    </a>
                     <button class="bg-[#0066b8] px-3 hover:bg-[#015493]">
                         <img src="./assets/arrow-down-sign-to-navigate.png" alt="download">
                     </button>
