added tailwind css for download section

--- a/index.html
+++ b/index.html
@@ -406,12 +406,99 @@
                         and many more languages on the Marketplace...
                     </a>
                 </p>
-                <div class="bg-[#0066b8] text-[#FFFFFF] text-[16px] md:text-[20px] my-[20px] py-[15px] px-[40px] font-medium">
-                    <a href="https://code.visualstudio.com/docs">
+                <a href="https://code.visualstudio.com/docs">   
+                    <div class="bg-[#0066b8] hover:bg-[#005BA4] cursor-pointer text-[#FFFFFF] text-[16px] md:text-[20px] my-[20px] py-[15px] px-[40px] font-medium">
                         Get Started Now
-                    </a>
-                </div>
+                    </div>
+                </a>
             </div> 
+        </section>
+
+        <!-- Download Section for Windows, Linux and Mac -->
+        <section class="flex flex-col md:flex-row justify-evenly items-center py-[70px]">
+            <div class="flex flex-col items-center md:mt-[-5px]">
+                <img src="./assets/windows-logo.png" alt="windows" class="w-[100px]">
+                <button class="mt-8 px-[75px] py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold">
+                    <img src="./assets/download.svg" alt="download" class="w-[18px] inline-block">
+                    Windows
+                    <p class="flex items-center text-[12px] ml-[5px]">Windows 8, 10, 11</p>
+                </button>
+                <table class="my-[20px]">
+                    <tr>
+                        <td>User Installer</td>
+                        <td>x64</td>
+                        <td>x86</td>
+                        <td>Arm64</td>
+                    </tr>
+                    <tr>
+                        <td>System Installer</td>
+                        <td>x64</td>
+                        <td>x86</td>
+                        <td>Arm64</td>
+                    </tr>
+                    <tr>
+                        <td>.zip</td>
+                        <td>x64</td>
+                        <td>x86</td>
+                        <td>Arm64</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="./assets/linux-logo.png" alt="windows" class="w-[100px]">
+                <div class="flex flex-row">
+                    <button class="mt-8 px-[35px] py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold mr-[2px]">
+                        <img src="./assets/download.svg" alt="download" class="w-[18px] inline-block">
+                        Windows
+                        <p class="flex items-center text-[12px] ml-[5px]">Windows 8, 10, 11</p>
+                    </button>
+                    <button class="mt-8 px-[35px] py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold ml-[2px]">
+                        <img src="./assets/download.svg" alt="download" class="w-[18px] inline-block">
+                        Windows
+                        <p class="flex items-center text-[12px] ml-[5px]">Windows 8, 10, 11</p>
+                    </button>
+                </div>
+                <table class="my-[20px]">
+                    <tr>
+                        <td>.deb</td>
+                        <td>x64</td>
+                        <td>Arm32</td>
+                        <td>Arm64</td>
+                    </tr>
+                    <tr>
+                        <td>.rpm</td>
+                        <td>x64</td>
+                        <td>Arm32</td>
+                        <td>Arm64</td>
+                    </tr>
+                    <tr>
+                        <td>tar.gz</td>
+                        <td>x64</td>
+                        <td>Arm32</td>
+                        <td>Arm64</td>
+                    </tr>
+                    <tr>
+                        <td>Snap</td>
+                        <td colspan="2">x64</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="flex flex-col items-center md:mt-[-80px]">
+                <img src="./assets/apple-logo.svg" alt="windows" class="w-[100px]">
+                <button class="mt-8 px-[75px] py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold">
+                    <img src="./assets/download.svg" alt="download" class="w-[18px] inline-block">
+                    Windows
+                    <p class="flex items-center text-[12px] ml-[5px]">Windows 8, 10, 11</p>
+                </button>
+                <table class="my-[20px]">
+                    <tr>
+                        <td>.zip</td>
+                        <td>Universal</td>
+                        <td>Intel</td>
+                        <td>Apple silicon</td>
+                    </tr>
+                </table>
+            </div>
         </section>
 
         <!-- Education Purpose footer -->
